WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84644
WaveTable should normalize to 0dbFS instead of -6dbFS
https://bugs.webkit.org/show_bug.cgi?id=84644
Summary
WaveTable should normalize to 0dbFS instead of -6dbFS
Chris Rogers
Reported
2012-04-23 15:39:02 PDT
WaveTable should normalize to 0dbFS instead of -6dbFS
Attachments
Patch
(1.38 KB, patch)
2012-04-23 15:42 PDT
,
Chris Rogers
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2012-04-23 15:42:46 PDT
Created
attachment 138441
[details]
Patch
Chris Rogers
Comment 2
2012-04-23 15:43:53 PDT
The Web Audio API spec:
https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html#dfn-createWaveTable
says that createWaveTable() normalizes to 0dbFS
Kenneth Russell
Comment 3
2012-04-23 16:07:25 PDT
Comment on
attachment 138441
[details]
Patch OK. Would it make sense to rebaseline the tests in this patch?
Chris Rogers
Comment 4
2012-04-23 16:10:13 PDT
I was planning to land the patch manually, and then use "garden-o-matic" to re-baseline all platforms once the new baselines become available.
Chris Rogers
Comment 5
2012-04-24 14:20:29 PDT
Committed
r115111
: <
http://trac.webkit.org/changeset/115111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug