WaveTable should normalize to 0dbFS instead of -6dbFS https://bugs.webkit.org/show_bug.cgi?id=84644

Reviewed by Kenneth Russell.

No new tests. Oscillator tests will be rebaselined after landing, since several platforms are affected.

* Modules/webaudio/WaveTable.cpp:
(WebCore::WaveTable::createBandLimitedTables):

Canonical link: https://commits.webkit.org/102268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115111 268f45cc-cd09-0410-ab3c-d52691b4dbfc